Begin first block, add image.

--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ a {
     text-decoration: none;
 }
 
+a {
+    color: red;
+}
+
 .header {
     justify-content: space-between;
     align-items: center;
