--- a/style.css
+++ b/style.css
@@ -55,3 +55,20 @@ a {
     padding-left: 100px;
     padding-right: 100px;
 }
+
+.block1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.propaganda-block {
+    display: flex;
+    flex-direction: column;
+    width: 75rem;
+}
+
+#topbutton {
+    height: auto;
+    width: 60px;
+}
