--- a/style.css
+++ b/style.css
@@ -99,5 +99,7 @@ a {
 .deathrow-portraits {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    gap: 40px;
+    height: 400px;
+    width: 450px;
 }
