--- a/style.css
+++ b/style.css
@@ -68,7 +68,6 @@ a {
     flex: 1 0 12px;
 }
 
-
 .block1 {
     display: flex;
     flex-direction: row;
@@ -102,4 +101,17 @@ a {
     gap: 40px;
     height: 400px;
     width: 450px;
+}
+
+.block3 {
+    display: flex;
+    flex-direction: column;
+    align-self: center;
+    width: 600px;
+    font-size: 36px;
+    font-family: cursive;
+}
+
+#quote {
+    align-self: flex-end;
 }
